Overflow of yes and no buttons in delete post fixed.

--- a/css/bloglist.css
+++ b/css/bloglist.css
@@ -160,8 +160,12 @@ body {
 }
 
 .btn-modal {
-    border: none;
-    color: white;
-    padding: 14px 50px;
     cursor: pointer;
+    position: relative;
+    padding: 0;
+    width: 40%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    animation-name: animatetop;
+    animation-duration: 0.4s;
+    font-family: 'Abel', sans-serif;
 }
